responsive site, few layout bugs

--- a/src/minimaHomePage.css
+++ b/src/minimaHomePage.css
@@ -1,11 +1,35 @@
 	body{
 		font-family: Manrope;
 		margin: 0px;
+		box-sizing: border-box;
+		max-width: 100vw;
 	}
 
 @font-face {
   font-family: Manrope;
   src: url(Manrope.ttf);
+}
+.masterWrapper{
+position: relative;
+display: inline-flex;
+flex-direction: column;
+height: 100%;
+width: 1440px;
+max-width: 100%;
+}
+.mainWrapper{
+	position: relative;
+display: inline-flex;
+flex-direction: column;
+height: 100%;
+width: 1440px;
+max-width: 100%;
+overflow: auto;
+padding: 0.5rem;
+	
+	
+	
+
 }
 	
 .flex-container {
@@ -33,18 +57,6 @@
   }
 
 
-#minimaNavbar{
-	border-radius: 4px;
-	border-bottom: white;
-	width: 100%;
-	height: 35px;
-	background-color: #005f63f2;
-	color: #FBFCF6;
-	text-align: center;
-	padding-top: 10px;
-	font-size: 1.25Rem;
-	
-	}
 
 .profileIMG{
 	padding: 30px;
@@ -166,6 +178,7 @@ height: 72px;
 background-color: white;
 color: black;
 border-bottom: 1px solid gray;
+flex: 0 0 auto;
 }
 
 #btnLogin{
@@ -311,8 +324,8 @@ border: 0px solid gray;
 .divHeroIMG{
 	height: 620px;
     width: 800px;
-    top: -36%;
-    left: 57%;
+    top: 0%;
+    left: 0%;
     position: relative;
     z-index: -22;
 }
@@ -323,10 +336,7 @@ border: 0px solid gray;
     font-weight: 800;
     line-height: 98px;
 }
-.mainWrapper{
-	width: 1440px;
 
-}
 .worksWrapper{
 	background-color: #F1E4FF;
 
@@ -337,10 +347,9 @@ border: 0px solid gray;
 
 .stepsWrapper{
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	height: 328px;
-	width: 1110px;
-	padding: 40px 165px 64px 165px;
+	
 }
 .stepsDiv{
 	height: 350px;
@@ -409,11 +418,7 @@ text-align: center;
 font-feature-settings: 'liga' off;
 }
 .footerTitle{
-	width: 236px;
-	height: 28px;
-	position: relative;
-	top:19%;
-	left:19%;
+	
 	color: white;
 	font-family: Manrope;
  	font-style: normal;
@@ -498,8 +503,8 @@ font-feature-settings: 'liga' off;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
-  height: 25%;
+  width: 75%;
+  height: 35%;
 }
 
 .close {
@@ -522,8 +527,8 @@ padding-left: 90px;
 height: 250%;
 }
 #inputEmail{
-	width: 60%;
-	height: 7%;
+	width: 80%;
+	height: 30%;
 }
 #minSubmit {
 font-family: Manrope;
